- updated build.sbt - updated deployment script - upgraded sbt version - added sbt-pgp plugin - removed sbt-spark-package